<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sensores Aplication</string>

    <string name="hello_world">SENSORES:</string>

    <string name="action_settings">Settings</string>

    <string name="Iniciar">INICIAR</string>

    <string name="Detener">DETENER</string>

    <string name="Salir">SALIR</string>

    <string name="Acelerometer">ACELEROMETRO</string>

    <string name="Gyroscope">GIROSCOPIO</string>

    <string name="Magnetic">MAGNETICO</string>


    <string name="Proximity">PROXIMIDAD</string>

    <string name="Temperature">TEMPERATURA</string>


</resources>
